--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 body.active{
-    background-color: #5d88b3;
+    background-color: #4a729b;
 }
 
 section.titre{
@@ -136,23 +136,28 @@ div.box.active .circle .nuit{
 img.nuage{
     position: absolute;
     width: 75px;
+    opacity: 100;
     transition: 0.15s linear;
 }
 
-img.nuage1{
-    left: 275px;
-    top: 30px;
-}
-
-img.nuage2{
-    left: 475px;
-    top: 12px;
-}
-
-
 body.active img.nuage{
-   left: 100%;
+   opacity: 0;
 }
+
+.etoile{
+    opacity: 0;
+    transition: 0.15s linear;
+ }
+
+body.active .etoile{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: #f2f2f2;
+    clip-path: polygon(50% 0, 60% 40%, 100% 50%, 60% 60%, 50% 100%, 40% 60%, 0 50%, 40% 40%);
+    opacity: 100;
+}
+
 
 
 
@@ -173,7 +178,9 @@ div.box .ville1 .jour {
     height: 100%;
     background-color: #2f5673;
     position: relative;
-    clip-path: polygon(100% 25%, 86% 25%, 86% 75%, 80% 75%, 80% 17%, 70% 17%, 67% 25%, 67% 58%, 63% 58%, 63% 34%, 53% 34%, 53% 26%, 47% 26%, 47% 66%, 43% 66%, 43% 42%, 37% 42%, 33% 50%, 0 50%, 0 100%, 100% 100%);
+    clip-path: polygon(100% 25%, 86% 25%, 86% 75%, 80% 75%, 80% 17%, 70% 17%, 67% 25%,
+    67% 58%, 63% 58%, 63% 34%, 53% 34%, 53% 26%, 47% 26%, 47% 66%, 43% 66%, 43% 42%,
+    37% 42%, 33% 50%, 0 50%, 0 100%, 100% 100%);
     transition: 0.15s linear;
     left: -50%;   
 }
@@ -192,10 +199,18 @@ div.box .ville1 .nuit {
     height: 100%;
     background-color: #152b40;
     position: relative;
-
-    clip-path: polygon(4% 73%, 2% 73%, 2% 66%, 4% 66%, 4% 62%, 2% 62%, 2% 56%, 4% 57%, 4% 54%, 2% 54%, 2% 48%, 15% 47%, 15% 65%, 18% 66%, 18% 28%, 31% 28%, 31% 60%, 35% 59%, 35% 54%, 44% 53%, 44% 83%, 46% 83%, 46% 31%, 58% 32%, 58% 40%, 87% 39%, 88% 32%, 100% 30%, 100% 100%, 0 100%);
+    clip-path: polygon(0% 100%, 0% 83%, 3% 83%, 3% 50%, 14% 50%, 14% 83%, 17% 83%,
+    17% 25%, 27% 25%, 30% 34%, 30% 66%, 33% 66%, 33% 58%, 40% 58%, 40% 75%, 47% 75%,
+    47% 17%, 53% 17%, 53% 25%, 60% 25%, 60% 42%, 100% 42%, 100% 100%);
     transition: 0.15s linear;
     left: -50%;
+}
+
+.fenetre_nuit{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: #efd368;
 }
 
 
@@ -236,7 +251,10 @@ div.box .ville2 .nuit {
     height: 100%;
     background-color: #517ea7;
     position: relative;
-    clip-path: polygon(43% 48%, 43% 20%, 63% 20%, 63% 62%, 75% 61%, 75% 43%, 92% 43%, 92% 73%, 100% 73%, 100% 100%, 0 100%, 0 48%);
+    clip-path: polygon(0% 100%, 0% 100%, 0% 33%, 0% 33%, 7% 34%, 7% 34%, 7% 59%, 7% 59%,
+    20% 59%, 20% 59%, 20% 17%, 20% 17%, 23% 9%, 23% 9%, 37% 9%, 37% 9%, 37% 50%, 37% 50%, 
+    43% 50%, 43% 50%, 43% 17%, 43% 17%, 50% 17%, 50% 17%, 50% 34%, 50% 34%, 57% 34%, 57% 34%, 
+    57% 9%, 57% 9%, 70% 9%, 70% 9%, 70% 91%, 70% 91%, 100% 91%, 100% 91%, 100% 100%, 100% 100%);    
     transition: 0.15s linear;
     left: -50%;
 }
